# Haskell-DS

./: Playground.hs  QuickSort.hs  RAList.hs  RBTree.hs  README.md  Treap.hs  playground.cabal
RAList/: Internal.hs  IsList.hs
RBTree/: Internal.hs
Treap/: Internal.hs  Random.hs
