cabal-version: 2.4
name: playground
version: 0.1.0.0

library foo
    exposed-modules: RAList, RBTree, QuickSort, Treap, PlayGround
    other-modules: RAList.Internal, RAList.IsList, RBTree.Internal, Treap.Internal, Treap.Random
    build-depends: base, transformers, random, array
    default-language: Haskell2010
    ghc-options: -O3 -Wall -fwarn-tabs
